--- a/event-management-service/src/main/resources/application.yml
+++ b/event-management-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/shared_database
+    url: jdbc:postgresql://localhost:5432/event_management_db
     username: your_username
     password: your_password
     driver-class-name: org.postgresql.Driver
