--- a/club-management-service/src/main/resources/application.yml
+++ b/club-management-service/src/main/resources/application.yml
@@ -1,12 +1,15 @@
+server:
+  port: 8181
+
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/club_management_db
-    username: your_username
-    password: your_password
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: 1
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
