--- a/event-management-service/src/main/resources/application.yml
+++ b/event-management-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/club_management
     username: postgres
     password: 1
     driver-class-name: org.postgresql.Driver
