--- a/user-management-service/src/main/resources/application.yml
+++ b/user-management-service/src/main/resources/application.yml
@@ -3,14 +3,14 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/club_management
-    username: postgres
-    password: 1
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:mysql://localhost:3306/user_management?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+    username: root
+    password: turkdogan2525
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
     hibernate:
-      ddl-auto: create
-    show-sql: true
+      ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.MySQLDialect
