--- a/user-management-service/src/main/resources/application.yml
+++ b/user-management-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/user_management?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
     username: root
-    password: turkdogan2525
+    password: 200202
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
