Enhance ClubManager login response with detailed JSON
-Updated ClubManagerController to return a detailed JSON response on login
- Added success status, message, email, and club manager ID to successful login response
- Included error status and message for failed login attempts
- Added getClubManagerByEmail method to ClubManagerService
- Updated ClubManagerRepository with findByEmail method
- Improved error handling and response consistency across the application

--- a/club-management-service/src/main/resources/application.yml
+++ b/club-management-service/src/main/resources/application.yml
@@ -3,15 +3,25 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: 1
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:mysql://localhost:3306/club_management?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+    username: root
+    password: turkdogan2525
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.MySQLDialect
 
+
+api:
+  gateway:
+    url: http://localhost:8080
+
+
+user:
+  management:
+    service:
+      url: http://localhost:8383
