--- a/event-management-service/src/main/resources/application.yml
+++ b/event-management-service/src/main/resources/application.yml
@@ -14,3 +14,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+
+
+api:
+  gateway:
+    url: http://localhost:8080
